relatively stable release 1.3a5.  It works towards the new stable
release 1.3.6.

This branch is also the basis for the "swig1.3" Debian package
(currently unofficial, available from
http://www.math.uni-magdeburg.de/~mkoeppe/imo-debian). 

Eventually this branch will be merged with the development on the
trunk of the CVS tree.

6/13/2001: mkoeppe
	   Partial merge from the CVS trunk at tag
	   "mkoeppe-merge-1". This covers the following changes:

| 01/16/01: ttn
|	   Wrote table of contents for Doc/engineering.html.  Added section
|	   on CVS tagging conventions.  Added copyright to other docs.
| 9/25/00 : beazley
| 	   Modified the preprocessor so that macro names can start with a '%'.
| 	   This may allow new SWIG "directives" to be defined as macros instead
| 	   of having to be hard-coded into the parser.  
|
| *** Also a yet-to-be-documented quoting mechanism with backquotes
| *** has been implemented?

6/13/2001: mkoeppe
	 * When configure does not find a language, don't use default
	   paths like /usr/local/include; this only causes build
	   problems.
	 * New directory: Examples/Guile/test-suite, where a few
	   bugs in 1.3a5 are demonstrated. 
	 * Handle C++ methods that have both a "const" and a "throw"
	   directive (see Examples/Guile/test-suite/cplusplus-throw.i); 
	   thanks to Scott B. Drummonds for the report and the fix. 
	 * Handle C++ pointer-reference arguments (like "int *& arg") 
	   (see Examples/Guile/test-suite/pointer-reference.i,
	   reported as SF bug #432224).
	 * [Ruby] Fixed typo in rubydec.swg; thanks to Lyle Johnson!
	 * Don't stop testing when one test fails.
	 * [Guile, MzScheme] Don't print "Generating wrappers...".

6/12/2001: mkoeppe
	   [Guile] VECTORLENINPUT and LISTLENINPUT now have separate
	   list length variables. TYPEMAP_POINTER_INPUT_OUTPUT
	   attaches argument documentation involving SCM_TYPE to the
	   standard pointer typemaps. INOUT is now an alias for BOTH.

6/12/2001: cheetah (william fulton)