@@ -1,3 +1,3 @@
-(if (character? (CHAR-CONSTANT))
+(if (char? (CHAR-CONSTANT))
     (exit 0)
     (exit 1))
