@@ -3,8 +3,6 @@
    Scott B. Drummonds, 08 June 2001.  
 */
 
-%include "guilemain.i"
-
 class bar {
   void baz() const;
   void foo() throw (exception);
